--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,9 @@ use_directory_urls: true
 
 exclude_docs: |
   /assets/*.pdf
+  /00-pesquisa/
+  **/PLAN.md
+  **/README.md
 
 theme:
   name: material
@@ -47,25 +50,25 @@ markdown_extensions:
 nav:
   - Home: index.md
   - Visao Geral: XX-meta/swebok-ai.md
-  - Introducao: 00-introduction/README.md
-  - KA 01 - Requirements: 01-software-requirements/README.md
-  - KA 02 - Architecture: 02-software-architecture/README.md
-  - KA 03 - Design: 03-software-design/README.md
-  - KA 04 - Construction: 04-software-construction/README.md
-  - KA 05 - Testing: 05-software-testing/README.md
-  - KA 06 - Operations: 06-software-engineering-operations/README.md
-  - KA 07 - Maintenance: 07-software-maintenance/README.md
-  - KA 08 - Config Mgmt: 08-software-configuration-management/README.md
-  - KA 09 - Management: 09-software-engineering-management/README.md
-  - KA 10 - Process: 10-software-engineering-process/README.md
-  - KA 11 - Models & Methods: 11-software-engineering-models-and-methods/README.md
-  - KA 12 - Quality: 12-software-quality/README.md
-  - KA 13 - Security: 13-software-security/README.md
-  - KA 14 - Professional Practice: 14-software-engineering-professional-practice/README.md
-  - KA 15 - Economics: 15-software-engineering-economics/README.md
-  - KA 16 - Computing Foundations: 16-computing-foundations/README.md
-  - KA 17 - Mathematical Foundations: 17-mathematical-foundations/README.md
-  - KA 18 - Engineering Foundations: 18-engineering-foundations/README.md
+  - Introducao: 00-introduction/01-contexto-revolucao-llms.md
+  - KA 01 - Requirements: 01-software-requirements/01-fundamentos-engenharia-restricoes.md
+  - KA 02 - Architecture: 02-software-architecture/01-fundamentos-arquitetura-hibrida.md
+  - KA 03 - Design: 03-software-design/01-fundamentos-design-era-llms.md
+  - KA 04 - Construction: 04-software-construction/01-fundamentos-orquestracao-curatoria.md
+  - KA 05 - Testing: 05-software-testing/01-fundamentos-verificacao-sistemas-ia.md
+  - KA 06 - Operations: 06-software-engineering-operations/PLAN.md
+  - KA 07 - Maintenance: 07-software-maintenance/PLAN.md
+  - KA 08 - Config Mgmt: 08-software-configuration-management/PLAN.md
+  - KA 09 - Management: 09-software-engineering-management/PLAN.md
+  - KA 10 - Process: 10-software-engineering-process/PLAN.md
+  - KA 11 - Models & Methods: 11-software-engineering-models-and-methods/PLAN.md
+  - KA 12 - Quality: 12-software-quality/PLAN.md
+  - KA 13 - Security: 13-software-security/PLAN.md
+  - KA 14 - Professional Practice: 14-software-engineering-professional-practice/PLAN.md
+  - KA 15 - Economics: 15-software-engineering-economics/PLAN.md
+  - KA 16 - Computing Foundations: 16-computing-foundations/PLAN.md
+  - KA 17 - Mathematical Foundations: 17-mathematical-foundations/PLAN.md
+  - KA 18 - Engineering Foundations: 18-engineering-foundations/PLAN.md
   - Ensaios:
     - Futuro da Profissao: XX-meta/swe-ai-future.md
     - Artefatos 2026: XX-meta/swe-ai-artifacts.md
