refactor: consolida estrutura em docs/ como fonte única da verdade
- Remove diretórios duplicados da raiz (00-18, XX-meta, XX-pesquisa)
- Move XX-ideais/ para docs/XX-ideais/
- Atualiza AGENTS.md com nova estrutura documentada
- Atualiza mkdocs.yml para incluir XX-ideais na navegação

Agora todo o conteúdo do livro está centralizado em docs/,
eliminando a duplicação entre raiz e docs/.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,6 +50,7 @@ markdown_extensions:
 nav:
   - Home: index.md
   - Visao Geral: XX-meta/swebok-ai.md
+  - Ideais: XX-ideais/gargalo.md
   - Introducao: 00-introduction/01-contexto-revolucao-llms.md
   - KA 01 - Requirements: 01-software-requirements/01-fundamentos-engenharia-restricoes.md
   - KA 02 - Architecture: 02-software-architecture/01-fundamentos-arquitetura-hibrida.md
