--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,3 +1,7 @@
 {
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "showUnsupportedFiles": true,
+  "userIgnoreFilters": [
+    ".git"
+  ]
 }
