--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,14 +29,6 @@ theme:
 
 plugins:
   - search
-  - exporter:
-      formats:
-        pdf:
-          enabled: true
-          aggregator:
-            enabled: true
-            output: assets/swebok-ai.pdf
-            covers: none
 
 markdown_extensions:
   - admonition
@@ -57,19 +49,20 @@ nav:
   - KA 03 - Design: 03-software-design/01-fundamentos-design-era-llms.md
   - KA 04 - Construction: 04-software-construction/01-fundamentos-orquestracao-curatoria.md
   - KA 05 - Testing: 05-software-testing/01-fundamentos-verificacao-sistemas-ia.md
-  - KA 06 - Operations: 06-software-engineering-operations/PLAN.md
-  - KA 07 - Maintenance: 07-software-maintenance/PLAN.md
-  - KA 08 - Config Mgmt: 08-software-configuration-management/PLAN.md
-  - KA 09 - Management: 09-software-engineering-management/PLAN.md
-  - KA 10 - Process: 10-software-engineering-process/PLAN.md
-  - KA 11 - Models & Methods: 11-software-engineering-models-and-methods/PLAN.md
-  - KA 12 - Quality: 12-software-quality/PLAN.md
-  - KA 13 - Security: 13-software-security/PLAN.md
-  - KA 14 - Professional Practice: 14-software-engineering-professional-practice/PLAN.md
-  - KA 15 - Economics: 15-software-engineering-economics/PLAN.md
-  - KA 16 - Computing Foundations: 16-computing-foundations/PLAN.md
-  - KA 17 - Mathematical Foundations: 17-mathematical-foundations/PLAN.md
-  - KA 18 - Engineering Foundations: 18-engineering-foundations/PLAN.md
+  - KA 06 - Operations: 06-software-engineering-operations/01-fundamentos-operations-ia.md
+  - KA 07 - Maintenance: 07-software-maintenance/01-fundamentos-manutencao-opacos.md
+  - KA 08 - Config Mgmt: 08-software-configuration-management/01-fundamentos-scm-ia.md
+  - KA 09 - Management: 09-software-engineering-management/01-gestao-projetos-ia.md
+  - KA 10 - Process: 10-software-engineering-process/01-processos-engenharia-ia.md
+  - KA 11 - Models & Methods: 11-software-engineering-models-and-methods/01-modelos-desenvolvimento-ia.md
+  - KA 12 - Quality: 12-software-quality/01-qualidade-sistemas-ia.md
+  - KA 13 - Security: 13-software-security/01-seguranca-codigo-ia.md
+  - KA 14 - Professional Practice: 14-software-engineering-professional-practice/01-pratica-profissional-ia.md
+  - KA 15 - Economics: 15-software-engineering-economics/01-economia-software-ia.md
+  - KA 16 - Computing Foundations: 16-computing-foundations/01-sistemas-cognitivos-artificiais.md
+  - KA 17 - Mathematical Foundations: 17-mathematical-foundations/01-fundamentos-matematicos-ia.md
+  - KA 18 - Engineering Foundations: 18-engineering-foundations/01-fundamentos-engenharia-ia.md
+  - KA 19 - Appendix: 19-appendix/01-recursos-complementares.md
   - Ensaios:
       - Futuro da Profissao: XX-meta/swe-ai-future.md
       - Artefatos 2026: XX-meta/swe-ai-artifacts.md
