fix: configure mkdocs-exporter plugin for PDF generation
Add exporter plugin configuration to mkdocs.yml to generate PDF artifact
at site/assets/swebok-ai.pdf. This fixes the GitHub Actions upload error
where the PDF file was not being found.

Changes:
- Add exporter plugin with PDF aggregator enabled
- Configure output path to assets/swebok-ai.pdf
- Minor content updates in introduction section

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,6 +29,13 @@ theme:
 
 plugins:
   - search
+  - exporter:
+      formats:
+        pdf:
+          enabled: true
+          aggregator:
+            enabled: true
+            output: assets/swebok-ai.pdf
 
 markdown_extensions:
   - admonition
