--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,25 +51,157 @@ nav:
   - Visao Geral: XX-meta/swebok-ai.md
   - Ideais: XX-ideais/gargalo.md
   - Introducao: 00-introduction/01-contexto-revolucao-llms.md
-  - KA 01 - Requirements: 01-software-requirements/01-fundamentos-da-engenharia-de-restricoes.md
-  - KA 02 - Architecture: 02-software-architecture/01-fundamentos-arquitetura-hibrida.md
-  - KA 03 - Design: 03-software-design/01-fundamentos-design-era-llms.md
-  - KA 04 - Construction: 04-software-construction/01-fundamentos-orquestracao-curadoria.md
-  - KA 05 - Testing: 05-software-testing/01-fundamentos-verificacao-ia.md
-  - KA 06 - Operations: 06-software-engineering-operations/01-fundamentos-operacoes-sistemas-ia.md
-  - KA 07 - Maintenance: 07-software-maintenance/01-fundamentos-de-manutencao-de-sistemas-opacos.md
-  - KA 08 - Config Mgmt: 08-software-configuration-management/01-fundamentos-gestao-configuracao-ia.md
-  - KA 09 - Management: 09-software-engineering-management/01-equipes-hibridas.md
-  - KA 10 - Process: 10-software-engineering-process/01-fundamentos-de-processos-de-engenharia-com-ia.md
-  - KA 11 - Models & Methods: 11-software-engineering-models-and-methods/01-fundamentos-modelos-executaveis-generativos.md
-  - KA 12 - Quality: 12-software-quality/01-fundamentos-qualidade-sistemas-hibridos.md
-  - KA 13 - Security: 13-software-security/01-fundamentos-seguranca-sistemas-hibridos.md
-  - KA 14 - Professional Practice: 14-software-engineering-professional-practice/01-fundamentos-julgamento-tecnico.md
-  - KA 15 - Economics: 15-software-engineering-economics/01-fundamentos-da-nova-economia-do-software.md
-  - KA 16 - Computing Foundations: 16-computing-foundations/01-fundamentos-de-llms.md
-  - KA 17 - Mathematical Foundations: 17-mathematical-foundations/01-logica-formal-e-raciocinio-automatizado.md
-  - KA 18 - Engineering Foundations: 18-engineering-foundations/01-processo-engenharia-era-ia.md
-  - KA 19 - Appendix: 19-appendix/01-especificacoes-de-descricao-de-kas.md
+  - KA 01 - Requirements:
+      - 01 - Fundamentos: 01-software-requirements/01-fundamentos-da-engenharia-de-restricoes.md
+      - 02 - Elicitacao de Contexto: 01-software-requirements/02-elicitacao-de-contexto-e-intencao.md
+      - 03 - Invariantes e Contratos: 01-software-requirements/03-especificacao-de-invariantes-e-contratos.md
+      - 04 - Degradacao Graciosa: 01-software-requirements/04-modelagem-de-degradacao-graciosa-e-falhas.md
+      - 05 - Governanca e Responsabilidade: 01-software-requirements/05-governanca-e-responsabilidade-em-requisitos.md
+      - 06 - Variabilidade e Evolucao: 01-software-requirements/06-gestao-de-variabilidade-e-evolucao.md
+      - 07 - Ferramentas Modernas: 01-software-requirements/07-ferramentas-e-tecnicas-modernas.md
+  - KA 02 - Architecture:
+      - 01 - Fundamentos: 02-software-architecture/01-fundamentos-arquitetura-hibrida.md
+      - 02 - Supervisao e Controle: 02-software-architecture/02-arquitetura-supervisao-controle.md
+      - 03 - Separacao de Concerns: 02-software-architecture/03-separacao-concerns-criticos.md
+      - 04 - Auditabilidade: 02-software-architecture/04-design-auditabilidade-rastreamento.md
+      - 05 - Antropizacao: 02-software-architecture/05-antropizacao-interfaces-experiencias.md
+      - 06 - Qualidade Arquitetural: 02-software-architecture/06-qualidade-arquitetural-ia.md
+      - 07 - Documentacao: 02-software-architecture/07-documentacao-sistemas-opacos.md
+      - 08 - Ferramentas Modernas: 02-software-architecture/08-ferramentas-tecnicas-modernas.md
+  - KA 03 - Design:
+      - 01 - Fundamentos: 03-software-design/01-fundamentos-design-era-llms.md
+      - 02 - Principios para Codigo Gerado: 03-software-design/02-principios-design-codigo-gerado.md
+      - 03 - Padroes Sistemas Hibridos: 03-software-design/03-padroes-design-sistemas-hibridos.md
+      - 04 - Componentes Deterministicos: 03-software-design/04-design-componentes-deterministicos.md
+      - 05 - Interfaces e Contratos: 03-software-design/05-design-interfaces-contratos.md
+      - 06 - Verificabilidade: 03-software-design/06-design-verificabilidade.md
+      - 07 - Refatoracao Modernizacao: 03-software-design/07-refatoracao-modernizacao-assistida.md
+      - 08 - Ferramentas Modernas: 03-software-design/08-ferramentas-tecnicas-modernas.md
+  - KA 04 - Construction:
+      - 01 - Fundamentos: 04-software-construction/01-fundamentos-orquestracao-curadoria.md
+      - 02 - Pipeline de Verificacao: 04-software-construction/02-pipeline-verificacao-integracao.md
+      - 03 - Gestao de Qualidade: 04-software-construction/03-gestao-qualidade-codigo-gerado.md
+      - 04 - CI/CD: 04-software-construction/04-cicd-sistemas-ia.md
+      - 05 - Padroes Colaboracao: 04-software-construction/05-padroes-colaboracao-humano-ia.md
+      - 06 - Ferramentas: 04-software-construction/06-ferramentas-tecnologias.md
+  - KA 05 - Testing:
+      - 01 - Fundamentos: 05-software-testing/01-fundamentos-verificacao-ia.md
+      - 02 - Tecnicas de Teste LLM: 05-software-testing/02-tecnicas-teste-llm.md
+      - 03 - Testes Estatisticos: 05-software-testing/03-testes-estatisticos.md
+      - 04 - Verificacao de Contratos: 05-software-testing/04-verificacao-contratos.md
+      - 05 - Avaliacao de Agentes: 05-software-testing/05-avaliacao-agentes.md
+      - 06 - Metricas e Governanca: 05-software-testing/06-metricas-governanca.md
+  - KA 06 - Operations:
+      - 01 - Fundamentos: 06-software-engineering-operations/01-fundamentos-operacoes-sistemas-ia.md
+      - 02 - Planejamento em Escala: 06-software-engineering-operations/02-planejamento-operacoes-escala.md
+      - 03 - Entrega e Deployment: 06-software-engineering-operations/03-entrega-deployment-continuo.md
+      - 04 - Controle e Monitoramento: 06-software-engineering-operations/04-controle-monitoramento-sistemas-hibridos.md
+      - 05 - Consideracoes Praticas: 06-software-engineering-operations/05-consideracoes-praticas-operacoes.md
+      - 06 - Ferramentas Modernas: 06-software-engineering-operations/06-ferramentas-tecnologias-modernas.md
+  - KA 07 - Maintenance:
+      - 01 - Fundamentos: 07-software-maintenance/01-fundamentos-de-manutencao-de-sistemas-opacos.md
+      - 02 - Engenharia Reversa: 07-software-maintenance/02-engenharia-reversa-de-codigo-gerado-por-ia.md
+      - 03 - Refatoracao Assistida: 07-software-maintenance/03-refatoracao-e-modernizacao-assistida.md
+      - 04 - Divida Tecnica: 07-software-maintenance/04-gestao-de-divida-tecnica-em-sistemas-com-ia.md
+      - 05 - Evolucao de Legados: 07-software-maintenance/05-evolucao-e-migracao-de-sistemas-legados.md
+      - 06 - Ferramentas Modernas: 07-software-maintenance/06-ferramentas-e-tecnicas-modernas.md
+  - KA 08 - Config Mgmt:
+      - 01 - Fundamentos: 08-software-configuration-management/01-fundamentos-gestao-configuracao-ia.md
+      - 02 - Versionamento de Modelos: 08-software-configuration-management/02-versionamento-modelos-prompts-contexto.md
+      - 03 - Rastreabilidade: 08-software-configuration-management/03-rastreabilidade-sistemas-gerados-ia.md
+      - 04 - Gestao de Mudancas: 08-software-configuration-management/04-gestao-mudancas-ambientes-hibridos.md
+      - 05 - Reprodutibilidade: 08-software-configuration-management/05-reprodutibilidade-ambientes-execucao.md
+      - 06 - Ferramentas Modernas: 08-software-configuration-management/06-ferramentas-tecnologias-modernas.md
+  - KA 09 - Management:
+      - 01 - Equipes Hibridas: 09-software-engineering-management/01-equipes-hibridas.md
+      - 02 - Planejamento: 09-software-engineering-management/02-planejamento-projetos.md
+      - 03 - Metricas: 09-software-engineering-management/03-metricas-produtividade.md
+      - 04 - Gestao de Riscos: 09-software-engineering-management/04-gestao-riscos.md
+      - 05 - Stakeholders: 09-software-engineering-management/05-stakeholders-comunicacao.md
+      - 06 - Formacao: 09-software-engineering-management/06-formacao-competencias.md
+  - KA 10 - Process:
+      - 01 - Fundamentos: 10-software-engineering-process/01-fundamentos-de-processos-de-engenharia-com-ia.md
+      - 02 - Processos Ageis: 10-software-engineering-process/02-processos-ageis-adaptados-para-o-uso-de-ia.md
+      - 03 - MDD com LLMs: 10-software-engineering-process/03-model-driven-development-com-llms.md
+      - 04 - Workflows Agenticos: 10-software-engineering-process/04-workflows-agenticos-e-automacao.md
+      - 05 - Medicao e Melhoria: 10-software-engineering-process/05-medicao-e-melhoria-de-processos.md
+      - 06 - Governanca: 10-software-engineering-process/06-governanca-e-compliance-de-processos.md
+  - KA 11 - Models & Methods:
+      - 01 - Fundamentos: 11-software-engineering-models-and-methods/01-fundamentos-modelos-executaveis-generativos.md
+      - 02 - Modelagem de Dominio: 11-software-engineering-models-and-methods/02-modelagem-dominio-engenharia-contexto.md
+      - 03 - Metodos Formais: 11-software-engineering-models-and-methods/03-metodos-formais-verificacao-assistida.md
+      - 04 - Prototipagem: 11-software-engineering-models-and-methods/04-prototipagem-design-iterativo.md
+      - 05 - Modelagem Arquitetural: 11-software-engineering-models-and-methods/05-modelagem-arquitetural-sistemas.md
+      - 06 - Especificacao e Validacao: 11-software-engineering-models-and-methods/06-metodos-especificacao-validacao.md
+  - KA 12 - Quality:
+      - 01 - Fundamentos: 12-software-quality/01-fundamentos-qualidade-sistemas-hibridos.md
+      - 02 - Qualidade de Codigo: 12-software-quality/02-qualidade-codigo-llms.md
+      - 03 - Qualidade Comportamental: 12-software-quality/03-qualidade-comportamental-robustez.md
+      - 04 - Explicabilidade: 12-software-quality/04-explicabilidade-interpretabilidade.md
+      - 05 - Garantia e Curadoria: 12-software-quality/05-garantia-qualidade-curadoria.md
+      - 06 - Governanca: 12-software-quality/06-governanca-qualidade-frameworks.md
+  - KA 13 - Security:
+      - 01 - Fundamentos: 13-software-security/01-fundamentos-seguranca-sistemas-hibridos.md
+      - 02 - Vulnerabilidades: 13-software-security/02-vulnerabilidades-codigo-gerado.md
+      - 03 - Ataques LLM: 13-software-security/03-ataques-aplicacoes-llm.md
+      - 04 - Cadeia de Suprimentos: 13-software-security/04-seguranca-cadeia-suprimentos.md
+      - 05 - Defesas: 13-software-security/05-defesas-mitigacoes.md
+      - 06 - Governanca: 13-software-security/06-governanca-gestao-risco.md
+  - KA 14 - Professional Practice:
+      - 01 - Fundamentos: 14-software-engineering-professional-practice/01-fundamentos-julgamento-tecnico.md
+      - 02 - Responsabilidade Legal: 14-software-engineering-professional-practice/02-responsabilidade-legal-accountability.md
+      - 03 - Etica: 14-software-engineering-professional-practice/03-etica-codigos-conduta.md
+      - 04 - Formacao Profissional: 14-software-engineering-professional-practice/04-nova-formacao-profissional.md
+      - 05 - Governanca IA: 14-software-engineering-professional-practice/05-governanca-ia-compliance.md
+      - 06 - Comunicacao: 14-software-engineering-professional-practice/06-comunicacao-especificacao.md
+      - 07 - Dinamica de Equipes: 14-software-engineering-professional-practice/07-dinamica-equipes-orquestracao.md
+  - KA 15 - Economics:
+      - 01 - Fundamentos: 15-software-engineering-economics/01-fundamentos-da-nova-economia-do-software.md
+      - 02 - Paradoxo de Jevons: 15-software-engineering-economics/02-o-paradoxo-de-jevons-na-era-dos-llms.md
+      - 03 - TCO: 15-software-engineering-economics/03-custo-total-de-propriedade-tco-de-codigo-gerado-por-ia.md
+      - 04 - Metricas: 15-software-engineering-economics/04-metricas-e-produtividade-em-sistemas-hibridos-humanos-ia.md
+      - 05 - Make vs Buy: 15-software-engineering-economics/05-decisoes-de-make-vs-buy-vs-generate.md
+      - 06 - Risco e Incerteza: 15-software-engineering-economics/06-avaliacao-de-risco-e-incerteza-em-sistemas-nao-deterministicos.md
+      - 07 - Modelos de Negocio: 15-software-engineering-economics/07-modelos-de-negocio-e-valorizacao-na-economia-da-ia.md
+  - KA 16 - Computing Foundations:
+      - 01 - Fundamentos LLMs: 16-computing-foundations/01-fundamentos-de-llms.md
+      - 02 - Transformers: 16-computing-foundations/02-transformers-e-atencao.md
+      - 03 - Sistemas RAG: 16-computing-foundations/03-sistemas-rag.md
+      - 04 - Bancos Vetoriais: 16-computing-foundations/04-bancos-de-dados-vetoriais-e-embeddings.md
+      - 05 - Agentes: 16-computing-foundations/05-agentes-e-workflows-agenticos.md
+      - 06 - Hardware IA: 16-computing-foundations/06-hardware-para-computacao-de-ia.md
+      - 07 - Fundamentos Legado: 16-computing-foundations/07-fundamentos-deterministicos-legado.md
+  - KA 17 - Mathematical Foundations:
+      - 01 - Logica Formal: 17-mathematical-foundations/01-logica-formal-e-raciocinio-automatizado.md
+      - 02 - Tecnicas de Prova: 17-mathematical-foundations/02-tecnicas-de-prova-e-verificacao-formal.md
+      - 03 - Conjuntos e Relacoes: 17-mathematical-foundations/03-conjuntos-relacoes-e-funcoes-na-especificacao-de-restricoes.md
+      - 04 - Grafos: 17-mathematical-foundations/04-grafos-arvores-e-estruturas-de-dados-para-analise-de-codigo.md
+      - 05 - Automatos: 17-mathematical-foundations/05-automatos-e-maquinas-de-estado-para-modelagem-de-comportamento.md
+      - 06 - Linguagens: 17-mathematical-foundations/06-teoria-das-linguagens-e-analise-sintatica.md
+      - 07 - Criptografia: 17-mathematical-foundations/07-teoria-dos-numeros-e-criptografia-aplicada.md
+      - 08 - Combinatoria: 17-mathematical-foundations/08-combinatoria-e-complexidade-computacional.md
+      - 09 - Probabilidade: 17-mathematical-foundations/09-probabilidade-e-estatistica-para-sistemas-nao-deterministicos.md
+      - 10 - Precisao Numerica: 17-mathematical-foundations/10-precisao-numerica-e-analise-de-erros-em-computacao.md
+      - 11 - Estruturas Algebricas: 17-mathematical-foundations/11-estruturas-algebricas-e-abstracoes-matematicas.md
+      - 12 - Calculo: 17-mathematical-foundations/12-calculo-e-otimizacao-para-engenharia-de-software.md
+      - 13 - IA e ML: 17-mathematical-foundations/13-fundamentos-de-ia-e-aprendizado-de-maquina-para-engenheiros-de-software.md
+  - KA 18 - Engineering Foundations:
+      - 01 - Processo: 18-engineering-foundations/01-processo-engenharia-era-ia.md
+      - 02 - Design: 18-engineering-foundations/02-design-engenharia-sistemas-hibridos.md
+      - 03 - Abstracao: 18-engineering-foundations/03-abstracao-encapsulacao-sistemas-cognitivos.md
+      - 04 - Metodos Empiricos: 18-engineering-foundations/04-metodos-empiricos-sistemas-nao-deterministicos.md
+      - 05 - Analise Estatistica: 18-engineering-foundations/05-analise-estatistica-saidas-ia.md
+      - 06 - Modelagem: 18-engineering-foundations/06-modelagem-simulacao-prototipagem-sistemas-autonomos.md
+      - 07 - Medicao: 18-engineering-foundations/07-medicao-sistemas-software-gerados-ia.md
+      - 08 - Conformidade: 18-engineering-foundations/08-padroes-conformidade-engenharia-ia.md
+      - 09 - Analise Causa Raiz: 18-engineering-foundations/09-analise-causa-raiz-falhas-sistemas-cognitivos.md
+      - 10 - Industria 5.0: 18-engineering-foundations/10-industria-5-0-engenharia-software-cognitivo.md
+  - KA 19 - Appendix:
+      - 01 - Especificacoes KAs: 19-appendix/01-especificacoes-de-descricao-de-kas.md
+      - 02 - Padroes ISO/IEC/IEEE: 19-appendix/02-padroes-iso-iec-ieee.md
+      - 03 - Referencias: 19-appendix/03-referencias-consolidadas.md
+      - 04 - Glossario: 19-appendix/04-glossario-de-termos-de-ia.md
+      - 05 - Matriz de Conformidade: 19-appendix/05-matriz-de-conformidade.md
   - Ensaios:
       - Futuro da Profissao: XX-meta/swe-ai-future.md
       - Artefatos 2026: XX-meta/swe-ai-artifacts.md
