docs(editorial): executa sprint 1 de normalizacao estrutural
Alinha taxonomia canônica e separa home pública do guia interno para reduzir deriva editorial. Também normaliza status de frontmatter no acervo ativo para preparar validação automatizada nas próximas sprints.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -237,7 +237,7 @@ nav:
           - 07 - Modelos de Negocio: 15-software-engineering-economics/07-modelos-de-negocio-e-valorizacao-na-economia-da-ia.md
 
   - PARTE V - Referencias:
-      - KA 16 - Apendice:
+      - 16 - Apendice:
           - 01 - Especificacoes KAs: 16-appendix/01-especificacoes-de-descricao-de-kas.md
           - 02 - Padroes ISO/IEC/IEEE: 16-appendix/02-padroes-iso-iec-ieee.md
           - 03 - Referencias: 16-appendix/03-referencias-consolidadas.md
